RESOLVED FIXED157927
Mail crashes under TiledCoreAnimationDrawingAreaProxy::createFenceForGeometryUpdate() when the Web process crashes
https://bugs.webkit.org/show_bug.cgi?id=157927
Summary Mail crashes under TiledCoreAnimationDrawingAreaProxy::createFenceForGeometry...
Tim Horton
Reported 2016-05-19 15:20:27 PDT
Mail crashes under TiledCoreAnimationDrawingAreaProxy::createFenceForGeometryUpdate() when the Web process crashes
Attachments
Patch (2.34 KB, patch)
2016-05-19 15:20 PDT, Tim Horton
dino: review+
Tim Horton
Comment 1 2016-05-19 15:20:41 PDT
Tim Horton
Comment 2 2016-05-19 15:21:07 PDT
Tim Horton
Comment 3 2016-05-19 17:20:21 PDT
Note You need to log in before you can comment on or make changes to this bug.